--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -5,10 +5,73 @@
   The Friends service returns an array of friend data
 -->
 <ion-view view-title="{{chat.name}}">
-  <ion-content class="padding">
-    <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
-    <p>
-      {{chat.lastText}}
-    </p>
+  <ion-content class="padding item-avatar" style="text-align: center;">
+           <md-toolbar class="bar-subheader md-tall md-primary toolbar-medium toolbar-in-content">
+            <div>
+                <h1>
+                    <i class="fa fa-info-circle"></i>
+                </h1>
+
+                <h3> Device Information </h3>
+            </div>
+        </md-toolbar> <!--end toolbar section-->
+
+        <!--device information section-->
+        <!--lise section-->
+        <md-list id="device-information-content">
+            <md-list-item class="row">
+                <div class="col-50 title">
+                    Platform :
+                </div>
+                <div class="col-50">
+                    15
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+            <md-list-item class="row">
+                <div class="col-50 title">
+                    Model :
+                </div>
+                <div class="col-50">
+                    16
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+            <md-list-item class="row">
+                <div class="col-50 title">
+                    Version :
+                </div>
+                <div class="col-50">
+                   123
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+            <md-list-item class="row">
+                <div class="col-50 title">
+                    Manufacturer :
+                </div>
+                <div class="col-50">
+                    123
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+            <md-list-item>
+                <div class="col">
+                    123
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+        </md-list>
+   
+    <img class="media-object material_media_object" ng-src="{{chat.face}}" style="display: block; margin-left: auto; margin-right: auto;">
+    <h3>{{chat.lastText}}</h3>
+    <h3>Torcedor: Botafogo F.R.</h3>
+    <h3>Partidas: 18</h3>
+    <h3>Gols: 65</h3>
+    <h3>Taxa de vitórias: 50%</h3>
+    <h3>Lances:</h3>
+    <iframe width="100%" height="100%"
+      src="https://www.youtube.com/embed/sWhXgm4AETc" frameborder="0" allowfullscreen></iframe>
+    </div>
   </ion-content>
 </ion-view>
