--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Peladeiros de Sexta">
+<ion-view view-title="">
    
   <ion-content class="padding" style="text-align: center;">
         <div style="    display: table;
@@ -16,15 +16,64 @@
             <br>
         </div>
     </div>
-    <h3>Horário: Sexta-feira, 20h30 às 22h00.</h3>
-    <h3>Fundação: Setembro 1995</h3>
-    <h3>Partidas Gravadas: 25</h3>
-    <h3>Últimas Partidas:</h3>
+    
+        <md-list>
+            
+          <md-list-item class="row">
+                <div class="col-50 title">
+                    Fundação : 
+                </div>
+                <div class="col-50">
+                   Setembro de 1995
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+            
+             <md-list-item class="row">
+                <div class="col-50 title">
+                    Campo : 
+                </div>
+                <div class="col-50">
+                   <a href="http://andrecruz.com.br/paradisolocalizacao.html"></a>
+                   Chuteira de Ouro</a>
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+            
+             <md-list-item class="row">
+                <div class="col-50 title">
+                    Horário : 
+                </div>
+                <div class="col-50">
+                    Sextas, 20h30 às 22h00.
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+            
+            <md-list-item class="row">
+                <div class="col-50 title">
+                    Jogadores :
+                </div>
+                <div class="col-50">
+                   24
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+            
+             <md-list-item class="row">
+                <div class="col-50 title">
+                    Partidas Gravadas :
+                </div>
+                <div class="col-50">
+                   25
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+        </md-list>
+    <h3>Vídeos:</h3>
     <iframe width="100%" height="100%" 
       src="https://www.youtube.com/embed/videoseries?list=PLXOWQP5Jx-MiuvP_Ms3HBJEqWLlhNdKsp"
       frameborder="0" allowfullscreen></iframe>
     </div>
-    <h2>Troféus</h2>
-      <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
   </ion-content>
 </ion-view>
