--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -4,71 +4,87 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="{{chat.name}}">
+<ion-view view-title="">
   <ion-content class="padding item-avatar" style="text-align: center;">
-           <md-toolbar class="bar-subheader md-tall md-primary toolbar-medium toolbar-in-content">
-            <div>
-                <h1>
-                    <i class="fa fa-info-circle"></i>
-                </h1>
-
-                <h3> Device Information </h3>
-            </div>
-        </md-toolbar> <!--end toolbar section-->
-
+        
+    <img class="media-object material_media_object" ng-src="{{chat.face}}" 
+      style="display: block; margin-left: auto; margin-right: auto;">
+    <h3>{{chat.name}}</h3>
+    
         <!--device information section-->
         <!--lise section-->
-        <md-list id="device-information-content">
-            <md-list-item class="row">
+        <md-list>
+            
+         <md-list-item class="row">
                 <div class="col-50 title">
-                    Platform :
+                    Torcedor : 
                 </div>
                 <div class="col-50">
-                    15
+                    Botafogo F.R.
                 </div>
             </md-list-item>
             <md-divider></md-divider>
-            <md-list-item class="row">
+            
+          <md-list-item class="row">
                 <div class="col-50 title">
-                    Model :
+                    Jogador : 
                 </div>
                 <div class="col-50">
-                    16
+                   <a href="#/tab/dash"> Peladeiros de Sexta</a>
                 </div>
             </md-list-item>
             <md-divider></md-divider>
-            <md-list-item class="row">
+            
+             <md-list-item class="row">
                 <div class="col-50 title">
-                    Version :
+                    Posição : 
                 </div>
                 <div class="col-50">
-                   123
+                    {{chat.lastText}}
                 </div>
             </md-list-item>
             <md-divider></md-divider>
+            
             <md-list-item class="row">
                 <div class="col-50 title">
-                    Manufacturer :
+                    Gols :
                 </div>
                 <div class="col-50">
-                    123
+                   65
                 </div>
             </md-list-item>
             <md-divider></md-divider>
-            <md-list-item>
-                <div class="col">
-                    123
+            
+             <md-list-item class="row">
+                <div class="col-50 title">
+                    Assistências :
+                </div>
+                <div class="col-50">
+                   53
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+            
+           <md-list-item class="row">
+                <div class="col-50 title">
+                    Frequência :
+                </div>
+                <div class="col-50">
+                    72%
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+            
+            <md-list-item class="row">
+                <div class="col-50 title">
+                    Taxa de Vitórias :
+                </div>
+                <div class="col-50">
+                    50%
                 </div>
             </md-list-item>
             <md-divider></md-divider>
         </md-list>
-   
-    <img class="media-object material_media_object" ng-src="{{chat.face}}" style="display: block; margin-left: auto; margin-right: auto;">
-    <h3>{{chat.lastText}}</h3>
-    <h3>Torcedor: Botafogo F.R.</h3>
-    <h3>Partidas: 18</h3>
-    <h3>Gols: 65</h3>
-    <h3>Taxa de vitórias: 50%</h3>
     <h3>Lances:</h3>
     <iframe width="100%" height="100%"
       src="https://www.youtube.com/embed/sWhXgm4AETc" frameborder="0" allowfullscreen></iframe>
